Refactor VortexCrudDataStore into basic and query interfaces
Split VortexCrudDataStore into a base interface for CRUD operations and a VortexCrudQueryDataStore extension for complex filtering.
Added CustomDataStoreConfig builder for flexible datastore configuration.
Updated Jooq and JPA implementations to support the new interface structure.
Updated UI components (Grid, Form, Kanban) to gracefully handle non-queryable datastores.