@@ -3,10 +3,12 @@ package com.github.appreciated.vortex_crud.jooq.service;
 import com.github.appreciated.vortex_crud.core.config.model.CollectionConfiguration;
 import com.github.appreciated.vortex_crud.core.config.model.OneToMany;
 import com.github.appreciated.vortex_crud.core.entity.data_store.VortexCrudDataStore;
+import com.github.appreciated.vortex_crud.core.entity.data_store.VortexCrudQueryDataStore;
 import org.jooq.TableField;
 import org.jooq.TableRecord;
 import org.jooq.impl.TableImpl;
 
+import java.util.Collections;
 import java.util.List;
 
 public class JooqOneToMany implements OneToMany<TableRecord<?>, TableField<?, ?>, TableImpl<?>> {
@@ -19,8 +21,15 @@ public class JooqOneToMany implements OneToMany<TableRecord<?>, TableField<?, ?>
 
     @Override
     public List<TableRecord<?>> getData(Object foreignKeyValue, VortexCrudDataStore<TableField<?, ?>, ?> dataStore, CollectionConfiguration<TableRecord<?>, TableField<?, ?>, TableImpl<?>> collectionConfiguration) {
-        return foreignKeyValue == null ? List.of() :
-                (List<TableRecord<?>>) dataStore.getRecordsFromTableWhereColumnEquals(referenceField, foreignKeyValue, 0, Integer.MAX_VALUE);
+        if (foreignKeyValue == null) {
+            return List.of();
+        }
+        if (dataStore instanceof VortexCrudQueryDataStore) {
+            return (List<TableRecord<?>>) ((VortexCrudQueryDataStore<TableField<?, ?>, ?>) dataStore).getRecordsFromTableWhereColumnEquals(referenceField, foreignKeyValue, 0, Integer.MAX_VALUE);
+        } else {
+            // Fallback: Can't filter if not queryable.
+            return Collections.emptyList();
+        }
     }
 
     @Override
